--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+*{
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #2D3436;
+  height: 100vh;
 }
 
 a {
@@ -13,4 +19,54 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1,h2,h3,h4{
+  margin:0;
+}
+
+#__next{
+  height: 100%;
+}
+
+a svg{
+  width:16px !important;
+  height:16px !important;
+}
+
+a.selected svg{
+  width:32px !important;
+  height: 32px !important;
+  transition: all .2s;
+}
+
+a.back{
+  display:flex;
+  align-items: center;
+  width:32px;
+  justify-content: center;
+  height:32px;
+}
+
+a.back svg{
+  width:24px !important;
+  height:24px !important;
+}   
+
+a.back:hover{
+  border-radius: 50%;
+  background-color: rgba(178, 190, 195,.3);
+}
+
+.icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a:hover .icon{
+  background-color: rgba(116, 185, 255,.4);
+  border-radius: 50%;
+  width:40px;
+  height: 40px;
 }
