--- a/components/Main/Main.module.css
+++ b/components/Main/Main.module.css
@@ -25,11 +25,24 @@
     overflow-y: auto;
 }
 
+.music_container::-webkit-scrollbar{
+    width:12px;
+}
+
+.music_container::-webkit-scrollbar-thumb{
+    border-radius: 6px;
+    background-color: #0984e3;
+}
+
+.music_container::-webkit-scrollbar-track{
+    background-color: gray;
+}
+
 .bottom_bar{
     display:flex;
     width:100%;
     height: 60px;
-    background-color: #DFE6E9;
+    background-color: white;
     align-items: center;
     justify-content: space-between;
 }
