--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #e3e3e3;
+  background-color: #ecf0f1;
   height: 100vh;
 }
 
@@ -29,6 +29,7 @@ h1,h2,h3,h4{
   height: 100%;
 }
 
+
 a svg{
   width:16px !important;
   height:16px !important;
@@ -46,6 +47,7 @@ a.back{
   width:32px;
   justify-content: center;
   height:32px;
+  transition: .2s all;
 }
 
 a.back svg{
@@ -62,10 +64,11 @@ a.back:hover{
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: .2s all;
 }
 
 a:hover .icon{
-  background-color: rgba(116, 185, 255,.4);
+  background-color: rgba(116, 185, 255,.8);
   border-radius: 50%;
   width:40px;
   height: 40px;
