--- a/components/Main/Main.module.css
+++ b/components/Main/Main.module.css
@@ -48,6 +48,9 @@
     background-color: white;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+    position: relative;
+    z-index: 2;
 }
 
 .bottom_bar a{
